temporarily renamed cohort to stream

--- a/app/views/instances/_cohort.html.erb
+++ b/app/views/instances/_cohort.html.erb
@@ -1,5 +1,5 @@
 <% if instances %> 
-<h1><%= cohort %></h1>
+<h1><%= stream %></h1>
 <table style="border: 1px solid grey;">
 <% instances.sort_by(&:code).each do |instance| %>
 <tr>
