--- a/app/views/instances/show.html.erb
+++ b/app/views/instances/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Cohort:</b>
-  <%= @instance.cohort %>
+  <b>Stream:</b>
+  <%= @instance.stream %>
 </p>
 
 <p>
