link time table to module descriptor

--- a/app/views/cohorts/_slots.html.erb
+++ b/app/views/cohorts/_slots.html.erb
@@ -23,7 +23,7 @@
 	        <% load = slot[:load] %>
 	        <tr>
 		  <td class="times-m">
-                    <b><%= link_to slot[:code], load, :title => load.title %></b>
+                    <b><%= link_to slot[:code], slot[:molecule].course, :title => load.title %></b>
                     <%= link_to slot[:title], load, :title => load.title %>
 [<%= content_tag(:span, slot[:loc], :title => "weeks #{load.weeks}")%>]
 		  </td>
