--- a/app/views/instances/show.html.erb
+++ b/app/views/instances/show.html.erb
@@ -1,23 +1,13 @@
-<p id="notice"><%= notice %></p>
+<h1>Instance</h1>
 
 <p>
-  <b>Stream:</b>
-  <%= @instance.stream %>
+  <b>Molecule:</b>
+  <%= @instance.molecule_id %>
 </p>
 
 <p>
-  <b>Atom:</b>
-  <%= @instance.atom_id %>
-</p>
-
-<p>
-  <b>Course:</b>
-  <%= @instance.course_id %>
-</p>
-
-<p>
-  <b>Code:</b>
-  <%= @instance.code %>
+  <b>Cohort:</b>
+  <%= @instance.cohort_id %>
 </p>
 
 <p>
