--- a/app/views/cohorts/_slots.html.erb
+++ b/app/views/cohorts/_slots.html.erb
@@ -21,10 +21,11 @@
 	    <table class="times-inner">
               <% slots_here.sort_by { |x| x[:load].code }.each do |slot| %>
 	        <% load = slot[:load] %>
+	        <% molecule = slot[:molecule] %>
 	        <tr>
 		  <td class="times-m">
-                    <b><%= link_to slot[:code], slot[:molecule].course, :title => load.title %></b>
-                    <%= link_to slot[:title], load, :title => load.title %>
+                    <b><%= link_to molecule.code, molecule.course, :title => load.title %></b>
+                    <%= link_to molecule.title, molecule.course, :title => load.title %>
 [<%= content_tag(:span, slot[:loc], :title => "weeks #{load.weeks}")%>]
 		  </td>
 		</tr>
