--- a/app/views/academics/show.html.erb
+++ b/app/views/academics/show.html.erb
@@ -27,7 +27,7 @@
       <% loads_by_date.each do |load| %>
         <li>
           <%= load.hours %> hrs,
-          <%= link_to load.atom, load.atom %>.
+          <%= link_to load.atom, load %>.
         </li>
       <% end %>
     </ul>
