--- a/app/views/loads/index.html.erb
+++ b/app/views/loads/index.html.erb
@@ -58,7 +58,7 @@
 <h1>Teaching Load <%= academic_year_code(@date) %>. (<%= @loads.map(&:hours).sum %> hrs)</h1>
 
 <table>
-<% @loads.group_by(&:academic).sort_by { |academic, loads| academic.last }.each do |academic, loads| %>
+<% @loads.group_by(&:academic).sort_by { |academic, loads| -loads.map(&:hours).sum }.each do |academic, loads| %>
   <% total = loads.map(&:hours).sum %>
 <tr>
   <td width="55"></td>
