sort teaching load by semester and code

--- a/app/views/academics/show.html.erb
+++ b/app/views/academics/show.html.erb
@@ -20,11 +20,11 @@
   <%= @academic.extension %>
 </div>
 
-  <% @academic.loads.group_by(&:date).sort_by { |x| [x.semester, x.atom.code] }.reverse.each do |date, loads_by_date| %>
+  <% @academic.loads.group_by(&:date).sort.reverse.each do |date, loads_by_date| %>
 <br />
     <h3 class="edit-head">Teaching Load <%= academic_year_code(date) %> (<%= loads_by_date.map(&:hours).sum %> hrs)</h3>
     <ul>
-      <% loads_by_date.each do |load| %>
+      <% loads_by_date.sort_by { |x| [x.semester, x.atom.code] }.each do |load| %>
         <li>
           <%= load.hours %> hrs,
           <%= link_to load.atom, load %>.
