--- a/app/views/cohorts/_form.html.erb
+++ b/app/views/cohorts/_form.html.erb
@@ -25,7 +25,7 @@
   </div>
   <div class="field">
     <%= f.label :academic_id %><br />
-    <%= f.number_field :academic_id %>
+    <%= f.select :academic_id, Academic.all.map { |x| [x, x.id] }, :include_blank => true %>
   </div>
   <div class="actions">
     <%= f.submit %>
