added requisites to molecules

--- a/app/views/molecules/_form.html.erb
+++ b/app/views/molecules/_form.html.erb
@@ -20,6 +20,18 @@
     <%= f.text_field :title %>
   </div>
   <div class="field">
+    <%= f.label :prerequisites %><br />
+    <%= f.text_field :prerequisites %>
+  </div>
+  <div class="field">
+    <%= f.label :corequisites %><br />
+    <%= f.text_field :corequisites %>
+  </div>
+  <div class="field">
+    <%= f.label :exrequisites %><br />
+    <%= f.text_field :exrequisites %>
+  </div>
+  <div class="field">
     <%= f.label :description %><br />
     <%= f.text_area :description %>
   </div>
