--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Graduate Students</h1>
 
 <h2 class="edit-head"><%= @students.count %> Current Students</h2>
-[<%= mail_to @students.map(&:email).join(','), "Mail all", :cc => "goetz.pfeiffer@nuigalway.ie" %>]
+[<%= mail_to @students.map(&:email).select(&:present?).join(','), "Mail all", :cc => "goetz.pfeiffer@nuigalway.ie" %>]
 [<%= mail_to @students.map(&:academics).inject(&:|).select { |x| ["Mathematics", "HRB Clinical Research Facility"].include? x.school.name }.map(&:email).join(','), "Mail to all supervisors", :cc => "goetz.pfeiffer@nuigalway.ie" %>]
 
 
