show load only if it exists

--- a/app/views/academics/show.html.erb
+++ b/app/views/academics/show.html.erb
@@ -31,7 +31,8 @@
 </div>
 
 <br />
-  <% loads_by_date = @loads_by_date[@date] %>
+<% loads_by_date = @loads_by_date[@date] %>
+<% if loads_by_date.any? %>
     <h3 class="edit-head">Teaching Load <%= academic_year_code(@date) %> (<%= loads_by_date.map(&:hours).sum %> hrs)</h3>
     <ul>
       <% loads_by_date.sort_by { |x| [x.semester, x.atom.code] }.each do |load| %>
@@ -50,6 +51,7 @@
 </div>
     <% end %>
 </div>
+<% end %>
 
 <% if @academic.proposals.any? %>
 <h3>Project Proposals</h3>
