show load only if it exists

--- a/app/views/academics/show.html.erb
+++ b/app/views/academics/show.html.erb
@@ -32,7 +32,7 @@
 
 <br />
 <% loads_by_date = @loads_by_date[@date] %>
-<% if loads_by_date.any? %>
+<% if loads_by_date %>
     <h3 class="edit-head">Teaching Load <%= academic_year_code(@date) %> (<%= loads_by_date.map(&:hours).sum %> hrs)</h3>
     <ul>
       <% loads_by_date.sort_by { |x| [x.semester, x.atom.code] }.each do |load| %>
