--- a/app/views/loads/show.html.erb
+++ b/app/views/loads/show.html.erb
@@ -22,3 +22,6 @@ semester <%= @load.semester %>.
 <%= link_to 'Delete', @load, :confirm => 'Are you sure?', :method => :delete %> |
 <% end %>
 <%= link_to 'Back', loads_path %>
+<div style="float:right;font-size:smaller">
+<%= @load.updated_at.strftime("(Updated on %a %b %d, %Y at %H:%M:%S.)") %>
+</div>
