--- a/app/views/loads/_slots.html.erb
+++ b/app/views/loads/_slots.html.erb
@@ -26,7 +26,11 @@
                     <%= link_to load.code, load, :title => load.title %>
 		  </td>
 		  <td class="times-l">
-		    <%= link_to load.academic.short, load.academic, :title => load.academic.name %>
+		    <% if load.academic %>
+		      <%= link_to load.academic.short, load.academic, :title => load.academic.name %>
+                    <% else %>
+                      NN
+		    <% end %>
 		  </td>
 		  <td class="times-v">
 		    <%= content_tag(:span, slot[:loc], :title => "weeks #{load.weeks}")%>
