--- a/app/views/academics/_form.html.erb
+++ b/app/views/academics/_form.html.erb
@@ -74,6 +74,14 @@
       </tr>
       <tr>
 	<td align="right">
+	  <%= f.label :user_id %>
+	</td>
+	<td>
+	  <%= f.select :user_id, User.all.collect { |s| [s.email, s.id] }, :include_blank => true %>
+	</td>
+      </tr>
+      <tr>
+	<td align="right">
 	  <%= f.label :home_url, "Home Page" %>
 	</td>
 	<td>
