--- a/app/assets/stylesheets/screen/schoolmaster.css.scss
+++ b/app/assets/stylesheets/screen/schoolmaster.css.scss
@@ -7,7 +7,7 @@
 
 #banner {
   a {
-      color: #FFFFFF;
+      color: #111;
       text-decoration: none;
   }
   background: #B03060;
@@ -18,6 +18,8 @@
   font-weight: bold;
   color: white;
   text-align:center;
+  text-shadow: 0px 1px 1px #fff;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#bbf), to(#B03060));
 }
 
 #navigation {
