--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>SchoolMaster</title>
+  <%= favicon_link_tag 'schoolmaster.png' %>
   <%= stylesheet_link_tag "application", :media => "all" %>
   <%= stylesheet_link_tag "application-print", :media => "print" %>
   <%= javascript_include_tag "application" %>
