--- a/app/views/atoms/show.html.erb
+++ b/app/views/atoms/show.html.erb
@@ -37,7 +37,7 @@
 <li>
 <%= academic_year_code(load.date) %> Semester <%= load.semester %>:
 <%= load.hours %> hrs,
-<%= link_to load.academic, load %>.
+<%= link_to load.name, load %>.
 <%= load.comment %>
 <% if can? :update, load %>
   <div class="edit">
